<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_camera"
        android:icon="@mipmap/ic_action_camera"
        android:orderInCategory="100"
        android:title="@string/menu_camera_label"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_message"
        android:icon="@android:drawable/ic_dialog_email"
        android:orderInCategory="100"
        android:title="@string/menu_message_label"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_overflow"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="11111"
        android:title="@string/menu_overflow_title"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:title="@string/action_settings"
                app:showAsAction="never"/>

            <item
                android:id="@+id/action_edit_friends"
                android:orderInCategory="100"
                android:title="@string/menu_edit_friends"
                app:showAsAction="never"/>

            <item
                android:id="@+id/log_out"
                android:orderInCategory="100"
                android:title="@string/menu_log_out"
                app:showAsAction="never"/>

        </menu>
    </item>
</menu>
